# routes/api.php
@@ -21,4 +21,5 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::controller(AgentController::class)->group(function () {
     Route::get('/getagent', 'index');
     Route::get('/getagent/{id}', 'show');
+    Route::get('/getagents/{role}', 'showrole');
 });
